--- a/ces.sincroapp/app/src/main/res/values/strings.xml
+++ b/ces.sincroapp/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SINCROapp</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="email_label">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -9,14 +9,21 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="cc_number_input_fragment_prompt_cc_number">Citizen Card Number</string>
+    <string name="cc_number_label">Citizen Card Number</string>
     <string name="register_title">Register</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cc_number_input_fragment_summary_text">Insert your Citizen Card Number so you can continue the registration process</string>
-    <string name="cc_number_input_fragment_submit_button">Submit</string>
+    <string name="submit_button">Submit</string>
     <string name="information_review_fragment_label_cc_number">Citizen Card Number:</string>
     <string name="content">content</string>
     <string name="information_review_fragment_label_email">Email</string>
-    <string name="sent_email_text">We have sent you an email with a confirmation code, insert it below to verify your identity</string>
+    <string name="sent_email_text">We have sent you an email with a verification code, insert it below to verify your identity</string>
+    <string name="verification_code_input">Verification Code</string>
+    <string name="username_input">Username</string>
+    <string name="password_input">Password</string>
+    <string name="full_name_label">Full Name</string>
+    <string name="driver_licence_number_label">Driver Licence Number</string>
+    <string name="phone_number_label">Phone Number</string>
+    <string name="new_user_info_label">Create a new username and password to complete your registration</string>
 </resources>
